[gd_scene load_steps=30 format=2]

[ext_resource path="res://enemies/Ghost/Ghost.gd" type="Script" id=1]
[ext_resource path="res://enemies/Ghost/animations/ghost-idle_1.png" type="Texture" id=2]
[ext_resource path="res://enemies/Ghost/animations/ghost-idle_2.png" type="Texture" id=3]
[ext_resource path="res://enemies/Ghost/animations/ghost-idle_3.png" type="Texture" id=4]
[ext_resource path="res://enemies/Ghost/animations/ghost-idle_4.png" type="Texture" id=5]
[ext_resource path="res://enemies/Ghost/animations/ghost-idle_5.png" type="Texture" id=6]
[ext_resource path="res://enemies/Ghost/animations/ghost-idle_6.png" type="Texture" id=7]
[ext_resource path="res://enemies/Ghost/animations/ghost-idle_7.png" type="Texture" id=8]
[ext_resource path="res://enemies/Ghost/animations/ghost-shriek_1.png" type="Texture" id=9]
[ext_resource path="res://enemies/Ghost/animations/ghost-shriek_2.png" type="Texture" id=10]
[ext_resource path="res://enemies/Ghost/animations/ghost-shriek_3.png" type="Texture" id=11]
[ext_resource path="res://enemies/Ghost/animations/ghost-shriek_4.png" type="Texture" id=12]
[ext_resource path="res://enemies/Ghost/animations/ghost-vanish_1.png" type="Texture" id=13]
[ext_resource path="res://enemies/Ghost/animations/ghost-vanish_2.png" type="Texture" id=14]
[ext_resource path="res://enemies/Ghost/animations/ghost-vanish_3.png" type="Texture" id=15]
[ext_resource path="res://enemies/Ghost/animations/ghost-vanish_4.png" type="Texture" id=16]
[ext_resource path="res://enemies/Ghost/animations/ghost-vanish_5.png" type="Texture" id=17]
[ext_resource path="res://enemies/Ghost/animations/ghost-vanish_6.png" type="Texture" id=18]
[ext_resource path="res://enemies/Ghost/animations/ghost-vanish_7.png" type="Texture" id=19]
[ext_resource path="res://enemies/Ghost/FSM.gd" type="Script" id=20]
[ext_resource path="res://enemies/Ghost/IdelState.gd" type="Script" id=21]
[ext_resource path="res://enemies/Ghost/DieState.gd" type="Script" id=22]
[ext_resource path="res://enemies/Ghost/HitState.gd" type="Script" id=23]
[ext_resource path="res://enemies/Ghost/sound_effects/Roar__001.ogg" type="AudioStream" id=24]
[ext_resource path="res://enemies/Ghost/HuntState.gd" type="Script" id=25]
[ext_resource path="res://enemies/Ghost/ShriekState.gd" type="Script" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "shriek",
"speed": 7.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "death",
"speed": 7.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 35.72
height = 51.075

[sub_resource type="CircleShape2D" id=3]
radius = 394.785

[node name="Ghost" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_mask = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "shriek"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.96104 )
shape = SubResource( 2 )

[node name="AgroRadius" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroRadius"]
shape = SubResource( 3 )

[node name="FSM" type="Node" parent="."]
script = ExtResource( 20 )

[node name="IdleState" type="Node" parent="FSM"]
script = ExtResource( 21 )

[node name="DieState" type="Node" parent="FSM"]
script = ExtResource( 22 )

[node name="HitState" type="Node" parent="FSM"]
script = ExtResource( 23 )

[node name="HitSound" type="AudioStreamPlayer" parent="FSM/HitState"]
stream = ExtResource( 24 )

[node name="HuntState" type="Node" parent="FSM"]
script = ExtResource( 25 )

[node name="Timer" type="Timer" parent="FSM/HuntState"]
one_shot = true

[node name="ShriekState" type="Node" parent="FSM"]
script = ExtResource( 26 )
[connection signal="animation_finished" from="AnimatedSprite" to="FSM/DieState" method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite" to="FSM/ShriekState" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="AgroRadius" to="." method="_on_AgroRadius_body_entered"]
[connection signal="die" from="FSM/DieState" to="." method="_on_DieState_die"]
[connection signal="timeout" from="FSM/HuntState/Timer" to="FSM/HuntState" method="_on_Timer_timeout"]
